--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="_6">Базовая задача №6</string>
     <string name="task1task">Ход черных. Убей белую группу.</string>
     <string name="task2task">Ход черных. Выжить.</string>
+    <string name="task3task">Ход черных. Пленить 3 белых камня.</string>
+    <string name="decided">Молодец! Задача решена.</string>
     <string name="title_activity_task1">Task1</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
