--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="task3task">Ход черных. Пленить 3 белых камня.</string>
     <string name="task4task">Ход черных. Уменьшить глазное пространство белой группе.</string>
     <string name="task5task">Ход черных. Убить белую группу.</string>
-    <string name="task6task">Ход черных. Пленить 3 белых камня.</string>
+    <string name="task6task">Ход черных. Выжить.</string>
     <string name="decided">Молодец! Задача решена.</string>
     <string name="title_activity_task1">Task1</string>
     <!-- Strings used for fragments for navigation -->
