--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,9 @@
     <string name="title_activity_task6">Task6</string>
     <string name="todo">TODO</string>
 
+    <string name="live">Выжить группой - это значит построить 2 глаза. Это 2 пространства, куда противник не сможнт поставить свои камни.</string>
+    <string name="death">Убить группу соперника - это значит не дать построить глаза.</string>
+    <string name="captive">Пленить камни соперника, значит закрыть все дамэ (дыхания)</string>
+    <string name="breath">Дамэ - дыхания камня или группы. Степень это количество ходов, необходимое для полного окружения группы, учитывая ответы противника</string>
+
 </resources>
